--- a/Animation/app/src/main/AndroidManifest.xml
+++ b/Animation/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".tween.TweenAnimationActivity"
+            android:label="Tween"/>
     </application>
 
 </manifest>
