添加layout动画 添加activity跳转动画

--- a/Animation/app/src/main/AndroidManifest.xml
+++ b/Animation/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
 
         <activity android:name=".frame.FrameAnimationActivity"
             android:label="Frame"/>
+
+        <activity android:name=".layout.LayoutAnimationActivity"
+            android:label="Layout"/>
     </application>
 
 </manifest>
